# ML4Investment

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ml4investment/: .env.example  backtest.py  convert_to_dataframe.py  evaluate_single_stock.py  fetch_data.py  predict.py  predict_optimal_stock.py  predict_single_stock.py  train.py
ml4investment/config/: __init__.py  available_stocks.json  best_params.json  global_settings.py  predict_stocks.json  prod_model_hyperparams.json  prod_model_hyperparams_optimal.json  target_stocks.json  train_stocks.json
ml4investment/data/: prod_data_sampling_proportion.json  prod_model_features.json  prod_model_hyperparams.json  prod_model_hyperparams_optimal.json  prod_model_optimal.model  prod_process_feature_config.pkl  prod_process_feature_config_optimal.pkl  stock_sector_id_mapping.json
ml4investment/scripts/: daily_usage.sh  fetch_data.sh  hyperparameter_search.sh  hyperparameter_search_clip_scale.sh  hyperparameter_search_metric.sh  hyperparameter_search_objective.sh  retrain.sh  scaling_law.sh
ml4investment/utils/: data_loader.py  feature_calculating.py  feature_engineering.py  feature_processing.py  logging.py  model_backtesting.py  model_predicting.py  model_training.py  new.py  ori.py  seed.py  utils.py
tests/: conftest.py  test_data_loader.py  test_feature_engineering.py  test_feature_processing.py  test_fetch_data.py  test_logging.py  test_model_predicting.py  test_model_training.py  test_utils.py
