[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4investment"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.1",
    "arch==7.2.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "contourpy==1.3.1",
    "curl-cffi==0.11.4",
    "cycler==0.12.1",
    "et-xmlfile==2.0.0",
    "exchange-calendars==4.9",
    "filelock==3.18.0",
    "fonttools==4.56.0",
    "frozendict==2.4.6",
    "gdown==5.2.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "korean-lunar-calendar==0.3.1",
    "lightgbm==4.6.0",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "multitasking==0.0.11",
    "numpy==2.3.1",
    "openpyxl==3.1.5",
    "optuna>=4.2.1",
    "packaging==24.2",
    "pandas==2.3.0",
    "pandas-market-calendars==4.6.1",
    "patsy==1.0.1",
    "peewee==3.18.1",
    "pillow==11.1.0",
    "platformdirs==4.3.8",
    "prettytable==3.15.1",
    "protobuf==6.31.1",
    "pycparser==2.22",
    "pyluach==2.2.0",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==78.1.1",
    "six==1.17.0",
    "soupsieve==2.7",
    "sqlalchemy==2.0.39",
    "statsmodels==0.14.4",
    "threadpoolctl==3.5.0",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv>=0.7.13",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "yfinance>=0.2.63",
    "wandb==0.21.1",
    "schwabdev==2.5.0",
    "python-dotenv==1.1.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.8"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 99
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
# Using default format settings
